projects/vb6parse/snapshots/parsers/cst/control_flow/if/compiler_if_end_if_block.snap
---
source: projects/vb6parse/tests/control_flow/if_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CompilerDirective
      children:
        - kind: CompilerIfClause
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IfKeyword
              text: If
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: fComponent
            - kind: Whitespace
              text: " "
            - kind: ThenKeyword
              text: Then
            - kind: Newline
              text: "\n"
        - kind: StatementList
          children:
            - kind: SubStatement
              children:
                - kind: PrivateKeyword
                  text: Private
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Class_Initialize
                - kind: ParameterList
                  children:
                    - kind: LeftParenthesis
                      text: (
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "    "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: InitColors
                        - kind: Newline
                          text: "\n"
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
                - kind: Newline
                  text: "\n"
        - kind: CompilerEndIfClause
          children:
            - kind: Octothorpe
              text: "#"
            - kind: EndKeyword
              text: End
            - kind: Whitespace
              text: " "
            - kind: IfKeyword
              text: If
            - kind: Newline
              text: "\n"
